<resources>
    <string name="app_name" translatable="false">Entriviados</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgoten_password">Forgot your password?</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Sing up</string>

    <string name="user_name">Username</string>
    <string name="acept_terms">Acept terms and conditions</string>
    <string name="save_changes">Save changes</string>
    <string name="reset_password">Reset my password</string>
    <string name="score">Score</string>
    <string name="total_score">Total score</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="play_again">Play again</string>
    <string name="change_pic">Change pic</string>
    <string name="delete_account">Delete account</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="empty">"Invalid email or password"</string>
    <string name="auth_failed">Incorrect username or password</string>
    <string name="erro_ocurred">An error occurred: </string>
    <string name="email_already_exists">Email already exists</string>
    <string name="username_already_exists">Username already exists</string>

    <string-array name="register_errors">
        <item>Email not valid</item>
        <item>Password must have at least 6 characters</item>
        <item>Password mismatch</item>
    </string-array>

    <string-array name="settings_messages">
        <item>No user data</item>
        <item>Error retrieving data</item>
        <item>Changes saved successfully</item>
        <item>Failed to save changes</item>
        <item>Password updated successfully</item>
        <item>Failed to update password</item>
        <item>Image uploaded successfully</item>
        <item>Failed to update profile image</item>
        <item>Failed to upload image</item>
        <item>Account deleted</item>
        <item>Error deleting account</item>
    </string-array>

    <string-array name="screens">
        <item>Perfil</item>
        <item>Mensajes</item>
        <item>Ajustes</item>
        <item>Web</item>
        <item>Cerrar sesión</item>
    </string-array>
    <string name="are_you_sure_this_action_can_not_be_undone">Are you sure? This action can not be undone</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="uploading_image">Uploading image...</string>

    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_text">Terms and Conditions\n\n1. Acceptance of Terms\nBy downloading and using the Entriviados app (\"the App\"), you agree to and accept these Terms and Conditions. If you do not agree with these terms, please do not use the App.\n\n2. Use of the App\nThe App is intended for users over the age of 13. You agree to use the App responsibly and not for illegal or unauthorized activities. It is prohibited to post offensive, defamatory, obscene content or content that infringes the rights of others.\n\n3. User Content\nYou are responsible for the content you post on the App. By posting content, you grant us a non-exclusive, royalty-free license to use, reproduce, modify, and distribute such content in connection with the operation of the App.\n\n4. Privacy\nWe are committed to protecting your privacy. Your personal information will be used only in accordance with our Privacy Policy, available on our website or within the App.\n\n5. Intellectual Property\nAll rights, title, and interest in and to the App, including but not limited to text, graphics, logos, and software, are our property or the property of our licensors and are protected by applicable intellectual property laws.\n\n6. Changes to Terms\nWe reserve the right to modify these Terms and Conditions at any time. Changes will be effective once posted on the App. Your continued use of the App after the posting of changes constitutes your acceptance of the new terms.\n\n7. Limitation of Liability\nThe App is provided \"as is\" and \"as available\". We do not guarantee that the App will be error-free or that your use will be uninterrupted. We will not be liable for any direct, indirect, incidental, or consequential damages arising from the use or inability to use the App.\n\n8. Termination\nWe reserve the right to suspend or terminate your access to the App at any time, without notice, for any reason, including but not limited to, violation of these Terms and Conditions.\n\n9. Governing Law\nThese Terms and Conditions will be governed by and construed in accordance with the laws of the country in which our company is located. Any dispute arising in connection with these terms will be subject to the exclusive jurisdiction of the courts of that country.\n\n10. Contact\nIf you have any questions about these Terms and Conditions, please contact us via email at: support@entriviados.com.\n\nBy using Entriviados, you acknowledge that you have read and understood these Terms and Conditions in their entirety.</string>
    <string name="name">Name</string>

</resources>