<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/emphasise"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/imagelogout"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="logout button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/shutdown"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/editProfileImg"
                    app:civ_border_color="@color/emphasise"
                    app:civ_border_width="1dp"
                    app:civ_shadow="false"
                    android:src="@drawable/ic_person"
                    android:layout_gravity="center"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/changePicButton"
                    android:text="@string/change_pic"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/background"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editEmail"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@android:color/white"
                    android:backgroundTint="@color/emphasise"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editUsername"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/user_name"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/emphasise"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editPassword"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/emphasise"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/save_changes"
                    android:id="@+id/saveButton"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/emphasise"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/delete_account"
                    android:id="@+id/deleteButton"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/emphasise2"/>

            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>